--- a/templates/operativo/ahorro_futuro.html
+++ b/templates/operativo/ahorro_futuro.html
@@ -1,146 +1,183 @@
 {% extends 'navbar.html' %}
-
+{% load static %}
 {% block content %}
 
 
 <div class="container mt-4">
     <!-- Encabezado -->
-    <div class="card border-secondary">
-        <div class="card-header text-dark d-flex " style="background-color: #f5ea41">
+    <div class="card">
+        <div class="card-custom-header  d-flex">
             <h5 class="mb-0">Registro Ahorro Futuro</h5>
         </div>
-        
+
         <div class="card-body">
-            <!-- Formulario -->
-            <div class="row mb-3">
-                <div class="col-md-4">
-                    <label for="nombres" class="form-label">Nombres</label>
-                    <input type="text" id="nombres" class="form-control">
+            <!-- Mensajes de error -->
+            {% if messages %}
+            <div>
+                {% for message in messages %}
+                <div
+                    class="alert {% if message.tags == 'error' %}alert-danger{% elif message.tags == 'warning' %}alert-warning{% else %}alert-success{% endif %}">
+                    {{ message }}
                 </div>
-                <div class="col-md-4">
-                    <label for="noSocio" class="form-label">No. Socio</label>
-                    <input type="text" id="noSocio" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="noPlan" class="form-label">NO.Plan</label>
-                    <input type="text" id="noPlan" class="form-control">
-                </div>
+                {% endfor %}
             </div>
+            {% endif %}
 
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label for="identificacion" class="form-label">IDENTIFICACION</label>
-                    <input type="text" id="identificacion" class="form-control">
-                </div>
-                <div class="col-md-6">
-                    <button class="btn btn-danger">Anular</button>
-                </div>
-            </div>
+            <form method="post" id="formAhorros">
+                {% csrf_token %}
 
-            <div class="row mb-3">
-                <div class="col-md-4">
-                    <label for="tipo" class="form-label">TIPO</label>
-                    <input type="text" id="tipo" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="numero" class="form-label">NUMERO</label>
-                    <input type="text" id="numero" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="vMensual" class="form-label">V.MENSUAL</label>
-                    <input type="text" id="vMensual" class="form-control">
-                </div>
-            </div>
+                <input type="hidden" name="accion" value="" id="accion">
+                <div class="border rounded p-3 mb-5">
+                    <div class="row   align-items-center">
+                        <!-- Buscar -->
+                        <div class="col-md-5 mb-3">
+                            <label for="buscar" class="form-label">Buscar</label>
+                            <input type="text" id="buscar" name="buscar" class="form-control autocomplete-usuario"
+                                placeholder="APELLIDOS" value="{{ valores_ingresados.buscar }}">
+                            <datalist id="lista-usuarios"></datalist>
+                        </div>
 
-            <div class="row mb-3">
-                <div class="col-md-4">
-                    <label for="cuotas" class="form-label">CUOTAS</label>
-                    <input type="text" id="cuotas" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="fVence" class="form-label">F.VENCE</label>
-                    <input type="text" id="fVence" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="sal" class="form-label">SAL</label>
-                    <input type="text" id="sal" class="form-control">
-                </div>
-            </div>
+                        <!--Tabla de resultados del socio seleccionado-->
+                        <div class="col-md-1 offset-md-2">
+                            <label for="noPlan" class="form-label">No.Plan</label>
+                        </div>
+                        <div class="col-md-2">
+                            <input type="text" id="noPlan" class="form-control" disabled>
+                        </div>
+                        <div class="col-md-1">
+                            <button class="btn btn-danger" id="btnAnular">Anular</button>
+                        </div>
+                    </div>
 
-            <div class="row mb-3">
-                <div class="col-md-4">
-                    <label for="tipo" class="form-label">Tipo</label>
-                    <input type="text" id="tipo" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="vInicial" class="form-label">V.Inicial</label>
-                    <input type="text" id="vInicial" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="vMensual" class="form-label">V.Mensual</label>
-                    <input type="text" id="vMensual" class="form-control">
-                </div>
-            </div>
+                    <div class="table-responsive ">
+                        <table class="table table-bordered table-hover rounded overflow-hidden text-center">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th>IDENTIFICACION</th>
+                                    <th>TIPO</th>
+                                    <th>V.MENSUAL</th>
+                                    <th>CUOTAS</th>
+                                    <th>F.VENCIMIENTO</th>
+                                    <th>SALDO</th>
+                                    <th>INTERES</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for afuturo in afuturos %}
+                                <tr>
+                                    <td>{{ perfil.user.last_name }}</td>
+                                    <td>{{ perfil.user.first_name }}</td>
+                                    <td>{{ perfil.cedula }}</td>
+                                    <td>{{ perfil.rol.rol_nombre }}</td>
+                                    <td>{{ perfil.nombramiento }}</td>
+                                    <td>{{ perfil.lugar_trabajo }}</td>
+                                    <td>{{ perfil.telefono }}</td>
+                                    <td>{{ perfil.user.email }}</td>
+                                    <td>{{ perfil.estado|yesno:"Activo,Inactivo" }}</td>
 
-            <div class="row mb-3">
-                <div class="col-md-4">
-                    <label for="meses" class="form-label">Meses</label>
-                    <input type="text" id="meses" class="form-control">
+                                </tr>
+                                {% empty %}
+                                <tr>
+                                    <td colspan="7">
+                                        No se encontraron registros
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <label for="tInteres" class="form-label">T.Interes</label>
-                    <input type="text" id="tInteres" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <label for="procedorSaluto" class="form-label">PROCEDOR SALUTO</label>
-                    <input type="text" id="procedorSaluto" class="form-control">
-                </div>
-            </div>
 
-            <div class="row mb-3">
-                <div class="col-md-12">
-                    <button class="btn btn-primary">Calcular</button>
+                <!-- Formulario -->
+                <h5>Formulario de nuevo Ahorro Futuro</h5>
+                <div class=" container border rounded p-3 mb-3 ">
+                    <div class="row">
+                        <div class="col-md-10">
+                            <div class="row mb-3">
+                                <div class="col-md-4">
+                                    <label for="tipo" class="form-label">Tipo</label>
+                                    <input type="text" id="tipo" class="form-control">
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="vInicial" class="form-label">V.Inicial</label>
+                                    <input type="text" id="vInicial" class="form-control">
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="vMensual" class="form-label">V.Mensual</label>
+                                    <input type="text" id="vMensual" class="form-control">
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="meses" class="form-label">Meses</label>
+                                    <input type="text" id="meses" class="form-control">
+                                </div>
+                                <div class="col-md-2">
+                                    <label for="tInteres" class="form-label">T.Interes</label>
+                                    <input type="text" id="tInteres" class="form-control">
+                                </div>
+                            </div>
+                            <!-- Tabla -->
+                            <div class="table-responsive ">
+                                <table class="table table-bordered table-hover rounded overflow-hidden text-center">
+                                    <thead class="table-dark">
+                                        <tr>
+                                            <th>NO. PLAN</th>
+                                            <th>F. VENCIMIENTO</th>
+                                            <th>CAPITAL</th>
+                                            <th>INTERES</th>
+                                            <th>SALDO</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for afuturo in afuturos %}
+                                        <tr>
+                                            <td>{{ perfil.user.last_name }}</td>
+                                            <td>{{ perfil.user.first_name }}</td>
+                                            <td>{{ perfil.cedula }}</td>
+                                            <td>{{ perfil.rol.rol_nombre }}</td>
+                                            <td>{{ perfil.nombramiento }}</td>
+                                            <td>{{ perfil.lugar_trabajo }}</td>
+                                            <td>{{ perfil.telefono }}</td>
+                                            <td>{{ perfil.user.email }}</td>
+                                            <td>{{ perfil.estado|yesno:"Activo,Inactivo" }}</td>
+
+                                        </tr>
+                                        {% empty %}
+                                        <tr>
+                                            <td colspan="7">
+                                                No se encontraron registros
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        
+                        <!-- Botones -->
+                        <div class="col-md-2 mt-4 ">
+                            <div class="row ">
+                                <div class="col-md-12 d-flex justify-content-end ">
+                                    <button class="btn btn-info text-white">Calcular</button>
+                                </div>
+                                <div class="col-md-12 mt-3 d-flex justify-content-end ">
+                                    <button class="btn btn-success">Imprimir</button>
+                                </div>
+                                <div class="col-md-12 mt-2 d-flex justify-content-end ">
+                                    <button class="btn btn-primary">Guardar</button>
+                                </div>
+                                <div class="col-md-12 mt-2 d-flex justify-content-end ">
+                                    <button class="btn btn-secondary px-3">Limpiar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                 
+
                 </div>
-            </div>
-
-            <!-- Tabla -->
-            <div class="table-responsive mb-3">
-                <table class="table table-bordered table-striped text-center">
-                    <thead class="table-dark">
-                        <tr>
-                            <th>NUMERO</th>
-                            <th>FECHA</th>
-                            <th>VENCE</th>
-                            <th>CAPITAL</th>
-                            <th>INTERES</th>
-                            <th>SALDO</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>001</td>
-                            <td>2023-10-01</td>
-                            <td>2024-10-01</td>
-                            <td>1000.00</td>
-                            <td>100.00</td>
-                            <td>900.00</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Botones -->
-            <div class="d-flex justify-content-end gap-2">
-                <button class="btn btn-primary">Imprimir</button>
-                <button class="btn btn-secondary">Guardar</button>
-                <button class="btn btn-warning">Limpiar</button>
-                <button class="btn btn-danger">Cerrar</button>
-            </div>
+            </form>
         </div>
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+<script src="{% static 'js/autocomplete.js' %}"></script>
 
 {% endblock %}
