"Cambios en solicitud de creditos"

--- a/templates/operativo/deb_cetificados.html
+++ b/templates/operativo/deb_cetificados.html
@@ -29,8 +29,8 @@
                     <input type="date" id="f_debito" class="form-control">
                 </div>
                 <div class="col-md-3">
-                    <label for="fecha" class="form-label">Fecha Actual</label>
-                    <input type="date" id="fecha" class="form-control">
+                    <label for="f_actual" class="form-label">Fecha Actual</label>
+                    <input type="date" id="f_actual" class="form-control">
                 </div>
                 <div class="col-md-3 offset-md-3 d-flex justify-content-end align-items-end">
                     <button class="btn btn-success">Procesar</button>
@@ -39,7 +39,7 @@
 
             <!-- Tabla de Certificados -->
             <div class="table-responsive mb-3">
-                <table class="table table-bordered table-hover rounded overflow-hidden text-center">
+                <table class="table table-bordered rounded overflow-hidden text-center">
                     <thead class="table-dark">
                         <tr>
                             <th>N. SOCIO</th>
