--- a/templates/operativo/socios.html
+++ b/templates/operativo/socios.html
@@ -87,7 +87,7 @@
                             <input type="email" id="email" name="email" class="form-control" required>
                         </div>
                         <div class="col-md-3">
-                            <label for="rol" class="form-label">Rol del usuari</label>
+                            <label for="rol" class="form-label">Rol del usuario</label>
                             <select class="form-select {% if form.rol.errors %}is-invalid{% endif %}" id="id_rol"
                                 name="rol" required>
                                 <option value="" disabled selected>Seleccione... </option>
