--- a/templates/operativo/solicitud.html
+++ b/templates/operativo/solicitud.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <form method="post">
+            <form id="form-solicitud-credito" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="accion" value="" id="accion">
                 <div class="border rounded p-3 mb-3">
@@ -86,8 +86,9 @@
                                 placeholder=" " readonly>
                         </div>
                         <div class="col-md-2">
-                            <label for="num_solicitud" class="form-label">Nro. Solicitud</label>
-                            <input type="text" id="num_solicitud" name="sol_nro_solicitud" class="form-control">
+                            <label for="nro_solicitud" class="form-label">Nro. Solicitud</label>
+                            <input type="text" id="nro_solicitud" name="sol_nro_solicitud" class="form-control"
+                                value="{{valores_ingresados.nro_solicitud}}">
                         </div>
                     </div>
 
@@ -96,22 +97,19 @@
                     <div class="row mb-3 align-items-end">
                         <div class="col-md-1">
                             <label for="garante" class="form-label">Garante</label>
-                            <input class="form-check-input" type="checkbox" id="garante_checkbox" name="sol_garante" >
+                            <input class="form-check-input" type="checkbox" id="garante_checkbox" name="sol_garante">
                         </div>
                         <div class="col-md-6">
                             <label for="nombre_garante" class="form-label">Nombres Garante</label>
-                            <input type="text" id="nombre_garante" value="{{ valores_ingresados.nombre_garante }}"
-                                class="form-control autocomplete-garante" disabled>
+                            <input type="text" id="nombre_garante" class="form-control autocomplete-garante" disabled>
                         </div>
                         <div class="col-md-2">
                             <label for="num_garante" class="form-label">Nro. Garante</label>
-                            <input type="text" id="num_garante" name="sol_nro_garante"
-                                value="{{ valores_ingresados.num_garante }}" class="form-control" disabled>
+                            <input type="text" id="num_garante" name="sol_nro_garante" class="form-control" disabled>
                         </div>
                         <div class="col-md-3">
                             <label for="s_creditos" class="form-label">S. Créditos</label>
-                            <input type="text" id="s_creditos" value="{{ valores_ingresados.s_creditos }}"
-                                class="form-control" disabled>
+                            <input type="text" id="s_creditos" name="sol_s_creditos" class="form-control" disabled>
                         </div>
                     </div>
 
@@ -122,7 +120,7 @@
                             <select id="tipo_credito" name="sol_tipo_credito" class="form-select">
                                 <option value="">Seleccione ...</option>
                                 {% for credito in tipos_credito %}
-                                <option value="{{ credito.id }}" >
+                                <option value="{{ credito.id }}">
                                     {{ credito.tcredito_tipo }}
                                 </option>
                                 {% endfor %}
@@ -131,12 +129,12 @@
                         </div>
 
                         <!-- Forma de Pago -->
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <label for="forma_pago" class="form-label">Forma de Pago</label>
                             <select id="forma_pago" name="sol_forma_pago" class="form-select">
                                 <option value="">Seleccione ...</option>
                                 {% for pago in formas_pago %}
-                                <option value="{{ pago.id }}" >
+                                <option value="{{ pago.id }}">
                                     {{ pago.fpago_descripcion }}</option>
                                 {% endfor %}
                             </select>
@@ -145,15 +143,20 @@
                         <!-- Interés -->
                         <div class="col-md-2">
                             <label for="interes" class="form-label">T. Interés</label>
-                            <input type="number" id="interes" name="sol_interes" class="form-control" disabled
-                                value="{{ interes }}" readonly>
+                            <input type="number" id="interes" name="sol_interes" class="form-control" disabled >
                         </div>
 
                         <!-- Gracia -->
-                        <div class="col-md-2">
+                        <div class="col-md-1">
                             <label for="gracia" class="form-label">Gracia</label>
-                            <input type="number" id="gracia" name="sol_gracia" class="form-control" disable
-                                value="{{ gracia }}" readonly>
+                            <input type="number" id="gracia"  class="form-control" disabled
+                                value="{{ valores_ingresados.gracia }}" readonly>
+                        </div>
+                        <!-- Gracia -->
+                        <div class="col-md-2">
+                            <label for="min_aporte" class="form-label">Aportes minimo </label>
+                            <input type="number" id="min_aporte"  class="form-control" disabled
+                                value="{{ valores_ingresados.min_aporte }}" readonly>
                         </div>
                     </div>
 
@@ -174,7 +177,7 @@
                         <div class="col-md-3">
                             <label for="tipo_tabla" class="form-label">Tipo Tabla</label>
                             <select id="tipo_tabla" name="sol_tipo_tabla" class="form-select">
-                                <option value="FRANCESA" >FRANCESA</option>
+                                <option value="FRANCESA">FRANCESA</option>
                                 <!--<option value="ALEMAN" {% if valores_ingresados.tipo_tabla == "ALEMAN" %}selected{% endif %}>ALEMAN</option>-->
                             </select>
 
@@ -185,30 +188,30 @@
                     <div class="row mb-3">
                         <div class="col-md-3">
                             <label for="aportes" class="form-label">No. Aportes</label>
-                            <input type="text" id="aportes" class="form-control" disabled value="{{ nro_aportes }}"
-                                readonly>
+                            <input type="text" id="aportes" class="form-control" value="{{ valores_ingresados.nro_aportes }}"
+                                disabled readonly >
 
                         </div>
                         <div class="col-md-3">
                             <label for="v_aportes" class="form-label">V. Aportes</label>
                             <input type="text" id="v_aportes" name="sol_nro_aportes" class="form-control"
-                                value="{{ valor_aportes }}" disabled readonly>
+                                value="{{ valores_ingresados.valor_aportes }}" disabled readonly>
                         </div>
                         <div class="col-md-3">
                             <label for="condicion" class="form-label">Condición Laboral</label>
-                            <input type="text" id="condicion" name="sol_condicion" class="form-control"
-                                value="{{ valores_ingresados.condicion}}">
+                            <input type="text" id="condicion" name="sol_condicion" value="{{ valores_ingresados.condicion}}" class="form-control" disabled readonly>
                         </div>
                         <div class="col-md-3">
                             <label for="disponible" class="form-label">Disponible</label>
                             <input type="text" id="disponible" name="sol_disponible" class="form-control"
-                                value="{{ valores_ingresados.disponible }}">
+                                value="{{ valores_ingresados.disponible }}" disabled readonly>
                         </div>
                     </div>
 
                     <!-- Botones -->
                     <div class="d-flex justify-content-end gap-2">
-                        <button type="submit" class="btn btn-warning">Calcular</button>
+                        <button type="button" id="btn-calcular" class="btn btn-warning">Calcular</button>
+
                         <button type="submit" class="btn btn-primary">Guardar</button>
                         <button type="reset" class="btn btn-secondary">Limpiar</button>
                     </div>
@@ -217,19 +220,19 @@
                     <div class="row mb-3 mt-4">
                         <div class="col-md-2">
                             <label for="v_solicitud" class="form-label">V.Solicitud</label>
-                            <input type="text" id="v_solicitud" class="form-control" readonly>
+                            <input type="text" id="v_solicitud" class="form-control" value="{{ v_solicitud }}" readonly>
                         </div>
                         <div class="col-md-2">
                             <label for="comision" class="form-label">Comisión</label>
-                            <input type="text" id="comision" class="form-control" readonly>
+                            <input type="text" id="comision" class="form-control" value="{{ comision }}" readonly>
                         </div>
                         <div class="col-md-2">
                             <label for="v_encaje" class="form-label">V.Encaje</label>
-                            <input type="text" id="v_encaje" class="form-control" readonly>
+                            <input type="text" id="v_encaje" class="form-control" value="{{ v_encaje }}" readonly>
                         </div>
                         <div class="col-md-2">
                             <label for="monto_total" class="form-label">Monto Total</label>
-                            <input type="text" id="monto_total" class="form-control" readonly>
+                            <input type="text" id="monto_total" class="form-control" value="{{ monto_total }}" readonly>
                         </div>
                         <div class="col-md-4 d-flex align-items-end">
 
@@ -237,6 +240,14 @@
                             <button type="submit" class="btn btn-outline-primary w-100">
                                 <i class="fas fa-print"></i> Imprimir
                             </button>
+
+                            <button type="button" id="btn-imprimir" class="btn btn-outline-primary w-100"
+                                data-socio-id="{{ socio_seleccionado.id|default:'' }}">
+                                <i class="fas fa-print"></i> Imprimir
+                            </button>
+
+
+
 
 
                         </div>
@@ -282,44 +293,19 @@
 <script src="{% static 'js/autocomplete.js' %}"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
-        //Activar los campos garante 
         const checkbox = document.getElementById("garante_checkbox");
         const fields = [
             document.getElementById("nombre_garante"),
             document.getElementById("num_garante"),
             document.getElementById("s_creditos")
         ];
-
         checkbox.addEventListener("change", function () {
-            fields.forEach(field => {
-                field.disabled = !checkbox.checked;
-            });
+            fields.forEach(field => field.disabled = !checkbox.checked);
         });
 
-        // Inicializar autocompletado con ID del garante
         inicializarAutocompleteConId("#nombre_garante", "{% url 'buscar_usuarios' %}", "#num_garante");
-
-        const socioInput = document.getElementById("nroSocio");
-        const garanteCheckbox = document.getElementById("garante_checkbox");
-        const numGaranteInput = document.getElementById("num_garante");
-
-        if (socioInput) {
-            const socioId = socioInput.value;
-            cargarDatosCredito(socioId);
-
-            garanteCheckbox.addEventListener("change", () => {
-                const garanteId = garanteCheckbox.checked ? numGaranteInput.value : null;
-                cargarDatosCredito(socioId, garanteId);
-            });
-
-            numGaranteInput.addEventListener("blur", () => {
-                if (garanteCheckbox.checked && numGaranteInput.value) {
-                    cargarDatosCredito(socioId, numGaranteInput.value);
-                }
-            });
-        }
     });
-
 </script>
+<script src="{% static 'js/scripts.js' %}"></script>
 
 {% endblock %}
